src/components/pagination/_pagination.scss
//
// Copyright IBM Corp. 2016, 2018
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

$css--helpers: true;

@import '../../globals/scss/vars';
@import '../../globals/scss/theme';
@import '../../globals/scss/colors';
@import '../../globals/scss/spacing';
@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/typography';
@import '../../globals/scss/layout';
@import '../../globals/scss/css--helpers';
@import '../../globals/scss/import-once';
@import '../select/select';
@import '../text-input/text-input';

@mixin pagination {
  .#{$prefix}--data-table-v2-container + .#{$prefix}--pagination {
    border-top: 0;
  }

  .#{$prefix}--pagination {
    @include reset;
    @include font-family;
    width: 100%;
    background-color: $ui-01;
    padding: $spacing-xs $spacing-md;
    display: flex;
    align-items: center;
    border: 1px solid $ui-03;
    height: rem(40px);

    .#{$prefix}--form-item {
      flex: auto;
    }
  }

  .#{$prefix}--pagination__left {
    display: flex;
    align-items: center;
  }

  .#{$prefix}--pagination__right {
    display: flex;
    align-items: center;
    margin-left: auto;
  }

  .#{$prefix}--pagination__text {
    @include typescale('omega');
    color: $text-02;
    display: none;
    padding-right: $spacing-2xs;

    @include breakpoint('530px') {
      display: block;
    }
  }

  .#{$prefix}--pagination__button-icon {
    height: rem(12px);
    width: rem(12px);
    fill: $ui-05;
    pointer-events: none;
    transition: $transition--base;
    margin-top: $spacing-3xs;
  }

  .#{$prefix}--pagination__button {
    @include reset;
    border: none;
    background: none;
    cursor: pointer;

    &:hover {
      .#{$prefix}--pagination__button-icon {
        fill: $hover-secondary;
      }
    }

    &:focus {
      @include focus-outline('border');
    }

    &:disabled:hover {
      cursor: default;

      .#{$prefix}--pagination__button-icon {
        fill: $ui-05;
      }
    }
  }

  .#{$prefix}--pagination__button--backward {
    margin-left: $spacing-md;
    margin-right: $spacing-lg;
  }

  .#{$prefix}--pagination__button--forward {
    margin-left: $spacing-lg;
  }

  .#{$prefix}--pagination__button--no-index {
    border-right: 0;
    margin-right: 1px;
  }

  .#{$prefix}--pagination {
    .#{$prefix}--select {
      margin-right: $spacing-xs;
    }

    .#{$prefix}--select--inline {
      margin-right: 0;
      width: auto;
      display: flex;
      flex-direction: row;
      align-items: center;
    }

    .#{$prefix}--select-input {
      height: rem(24px);
      width: auto;
      padding: 0 1.25rem 0 0;
      margin: 0;
      font-weight: 600;
      text-align-last: center;
      box-shadow: none;

      &:focus {
        @include focus-outline('border');
      }
    }

    .#{$prefix}--select .#{$prefix}--select-input ~ .#{$prefix}--select__arrow {
      right: 0.3rem;
      top: 0.625rem;
    }

    .#{$prefix}--text-input {
      background-color: $field-01;
      height: rem(24px);
      min-width: rem(24px);
      width: rem(24px);
      padding: 0;
      margin: 0;
      font-weight: 600;
      text-align: center;
      box-shadow: none;
      order: 0;

      &:focus {
        @include focus-outline('border');
      }
    }
  }

  .#{$prefix}--pagination--inline {
    height: 42px;
    margin-top: -0.5rem;
    margin-bottom: -0.5rem;
    margin-right: -1rem;

    .#{$prefix}--pagination__button {
      height: rem(40px);
      border-left: 1px solid $ui-03;
      border-right: 1px solid $ui-03;
      margin: 0;
    }

    .#{$prefix}--pagination__button--forward {
      border-right: 0;
      padding: 0 $spacing-md;
      margin-left: $spacing-md;
    }

    .#{$prefix}--pagination__button--backward {
      margin: 0 $spacing-md;
      padding: 0 $spacing-md;
    }

    .#{$prefix}--select__arrow {
      right: 0;
      top: 0.6rem;
    }
  }

  // Skeleton state
  .#{$prefix}--pagination.#{$prefix}--skeleton .#{$prefix}--skeleton__text {
    margin-right: 1rem;
    margin-bottom: 0;
  }
}

@mixin pagination--x {
  .#{$prefix}--data-table-v2-container + .#{$prefix}--pagination {
    border-top: 0;
  }

  .#{$prefix}--pagination {
    @include reset;
    @include font-family;
    width: 100%;
    background-color: $ui-01;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border: $spacing-4xs solid $ui-03;
    height: rem(48px);

    .#{$prefix}--select {
      height: 100%;
      align-items: center;
    }

    .#{$prefix}--select-input {
      width: auto;
      min-width: auto;
      height: 100%;
    }

    .#{$prefix}--select__arrow {
      position: relative;
      top: auto;
      right: 1.1rem;
      bottom: auto;
    }

    .#{$prefix}--select__item-count {
      border-right: $spacing-4xs solid $ui-03;
    }

    .#{$prefix}--select__page-number {
      border-left: $spacing-4xs solid $ui-03;
      padding-left: 0.5rem;
    }
  }

  .#{$prefix}--pagination__left,
  .#{$prefix}--pagination__right {
    display: flex;
    height: 100%;
    align-items: center;
  }

  .#{$prefix}--pagination__left {
    padding: 0 $spacing-md;
  }

  label.#{$prefix}--pagination__text {
    margin-right: $spacing-md;
  }

  span.#{$prefix}--pagination__text {
    margin-left: $spacing-md;
  }

  .#{$prefix}--pagination__text {
    @include typescale('zeta');
    color: $text-02;
    display: none;

    @include breakpoint('530px') {
      display: inline-block;
    }
  }

  .#{$prefix}--pagination__button {
    @include reset;
    border: none;
    background: none;
    cursor: pointer;
    height: 100%;
    margin: 0;
    padding: 0 rem(14px);
    border-left: $spacing-4xs solid $ui-03;
    display: flex;
    justify-content: center;
    align-items: center;

    &:hover {
      .#{$prefix}--pagination__button-icon {
        fill: $hover-secondary;
      }
    }

    &:focus {
      @include focus-outline('outline');
    }

    &:disabled:hover {
      cursor: default;

      .#{$prefix}--pagination__button-icon {
        fill: $ui-05;
      }
    }
  }

  .#{$prefix}--pagination--inline {
    height: rem(42px);
    margin-top: -0.5rem;
    margin-bottom: -0.5rem;
    margin-right: -1rem;

    .#{$prefix}--pagination__button {
      height: rem(40px);
      border-left: $spacing-4xs solid $ui-03;
      border-right: $spacing-4xs solid $ui-03;
      margin: 0;
    }

    .#{$prefix}--pagination__button--forward {
      border-right: 0;
      padding: 0 $spacing-md;
      margin-left: $spacing-md;
    }

    .#{$prefix}--pagination__button--backward {
      margin: 0 $spacing-md;
      padding: 0 $spacing-md;
    }
  }

  // Skeleton state
  .#{$prefix}--pagination.#{$prefix}--skeleton .#{$prefix}--skeleton__text {
    margin-right: 1rem;
    margin-bottom: 0;
  }
}

@include exports('pagination') {
  @if feature-flag-enabled('components-x') {
    @include pagination--x;
  } @else {
    @include pagination;
  }
}

