fix(pagination): fix element spacing

--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -216,12 +216,19 @@ $css--helpers: true;
     .#{$prefix}--select {
       height: 100%;
       align-items: center;
+      grid-template-columns: auto 0;
     }
 
     .#{$prefix}--select-input {
       width: auto;
       min-width: auto;
-      height: 100%;
+      height: auto;
+      padding: 0 1.5rem 0 0.5rem;
+      // TODO: @include type-style('body-short-01');
+      font-size: rem(12px);
+      font-weight: regular;
+      line-height: rem(18px);
+      letter-spacing: 0.16px;
     }
 
     .#{$prefix}--select__arrow {
@@ -233,6 +240,7 @@ $css--helpers: true;
 
     .#{$prefix}--select__item-count {
       border-right: $spacing-4xs solid $ui-03;
+      padding-right: 0.5rem;
     }
 
     .#{$prefix}--select__page-number {
@@ -248,26 +256,36 @@ $css--helpers: true;
     align-items: center;
   }
 
+  .#{$prefix}--pagination__left .#{$prefix}--pagination__text {
+    margin-right: rem(1px);
+  }
+
+  .#{$prefix}--pagination__right .#{$prefix}--pagination__text {
+    margin-right: 1rem;
+    margin-left: rem(1px);
+  }
+
   .#{$prefix}--pagination__left {
     padding: 0 $spacing-md;
   }
 
-  label.#{$prefix}--pagination__text {
-    margin-right: $spacing-md;
-  }
-
-  span.#{$prefix}--pagination__text {
-    margin-left: $spacing-md;
-  }
-
   .#{$prefix}--pagination__text {
-    @include typescale('zeta');
-    color: $text-02;
+    // TODO: @include type-style('body-short-01');
+    font-size: rem(12px);
+    font-weight: regular;
+    line-height: rem(18px);
+    letter-spacing: 0.16px;
+    color: $text-01;
     display: none;
 
     @include breakpoint('530px') {
       display: inline-block;
     }
+  }
+
+  span.#{$prefix}--pagination__text {
+    margin-left: $spacing-md;
+    color: $text-02;
   }
 
   .#{$prefix}--pagination__button {
